--- a/src/client/tsconfig.json
+++ b/src/client/tsconfig.json
@@ -4,7 +4,7 @@
         "lib": ["es5", "es6", "dom"],
         "target": "es6",
         "module": "commonjs",
-        "outDir": "build/compiled",
+        "outDir": "../../build/client-compiled",
         "moduleResolution": "node",
         "emitDecoratorMetadata": true,
         "experimentalDecorators": true,
@@ -12,9 +12,7 @@
         "declaration": true,
         "rootDirs": [
             "./",
-            "./src/shared",
-            "./src/client",
-            "./src/server"
+            "../shared"
         ]
     },
     "exclude": [
